@@ -10,6 +10,7 @@ apport (1.7-0ubuntu2) UNRELEASED; urgency=low
     bugs are audio-related.
   * data/package-hooks/source_linux.py: Add linux-firmware version to kernel
     bug reports
+  * apport/hookutils.py: Add attach_wifi function with wifi-related debug info
 
  -- Matt Zimmerman <mdz@ubuntu.com>  Thu, 06 Aug 2009 16:29:14 +0100
 
